--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
         .header {
-            background-color: #4CAF50;
+            background-color: #5D3FD3;
             color: white;
             padding: 2rem 0;
             margin-bottom: 2rem;
@@ -33,6 +33,8 @@
         .image-gallery img {
             width: 100%;
             max-width: 400px;
+            height: auto;
+            object-fit: cover;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             transition: transform 0.3s ease;
@@ -47,7 +49,7 @@
             color: white;
         }
         .footer a {
-            color: #4CAF50;
+            color: #5D3FD3;
             text-decoration: none;
             font-weight: bold;
         }
@@ -61,11 +63,10 @@
     </div>
 
     <div class="container">
+        <!-- Ihre beiden Bilder wurden hier eingefügt. -->
         <div class="image-gallery">
-            <img src="https://images.pexels.com/photos/4030438/pexels-photo-4030438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Fußballspieler in Aktion">
-            <img src="https://images.pexels.com/photos/10772718/pexels-photo-10772718.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Fußball im Netz">
-            <img src="https://images.pexels.com/photos/5638162/pexels-photo-5638162.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Fußballstadion">
-            <img src="https://images.pexels.com/photos/4773223/pexels-photo-4773223.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Fußballschuhe">
+            <img src="Bild_2025-08-22_115234826.jpg" alt="Fußballspiel-Screenshot">
+            <img src="Screenshot 2025-08-22 115204.jpg" alt="Fußball-Quiz-Screenshot">
         </div>
     </div>
 
