--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </div>
 
     <div class="container">
-        <!-- Der Image-Gallery-Bereich wurde mit Ihren PNG-Dateien gefüllt. -->
+        <!-- Die Dateinamen wurden mit den korrekten, von Ihnen bereitgestellten Dateinamen aktualisiert. -->
         <div class="image-gallery">
-            <img src="Bild_2025-08-22_115831802.png" alt="Fußballspiel-Screenshot">
-            <img src="Bild_2025-08-22_115855362.png" alt="Fußball-Quiz-Screenshot">
+            <img src="Screenshot 2025-08-22 115204.png" alt="Fußball-Quiz-Screenshot">
+            <img src="Screenshot 2025-08-22 115218.png" alt="Fußballspiel-Screenshot">
         </div>
     </div>
 
